--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,18 +1,25 @@
-
 //
 // VARIABLES
 //
 
 // Colors
-$blue: #4183C4;
+$blue: #4183c4;
 
 // Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
+// $black: #000;
+// $darkerGray: #222;
+// $darkGray: #333;
+// $gray: #666;
+// $lightGray: #eee;
+// $white: #fff;
+
+// Dark theme
+$black: #fff;
+$darkerGray: #eee;
+$darkGray: #666;
+$gray: #333;
+$lightGray: #222;
+$white: #000;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
