update config and iamge

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@
 //
 
 // Colors
-$blue: #4183c4;
+$blue: #ffbb3c;
 
 // Grays
 // $black: #000;
@@ -16,8 +16,8 @@ $blue: #4183c4;
 // Dark theme
 $black: #fff;
 $darkerGray: #eee;
-$darkGray: #666;
-$gray: #333;
+$darkGray: #ffbb3c;
+$gray: #fff;
 $lightGray: #222;
 $white: #000;
 
