--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,8 +16,8 @@ $blue: #ffbb3c;
 // Dark theme
 $black: #fff;
 $darkerGray: #eee;
-$darkGray: #ffbb3c;
-$gray: #fff;
+$darkGray: #fff;
+$gray: #ffbb3c;
 $lightGray: #222;
 $white: #000;
 
