--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ h4,
 h5,
 h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: $gray;
   font-weight: bold;
 
   line-height: 1.7;
