--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/resume">Resume</a>
           </nav>
         </header>
       </div>
@@ -56,11 +57,11 @@
 
     <div id="main" role="main" class="container">{{ content }}</div>
 
-    <div class="wrapper-footer">
+    <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">{% include svg-icons.html %}</footer>
       </div>
-    </div>
+    </div> -->
 
     {% include analytics.html %}
   </body>
