--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/resume">Resume</a>
           </nav>
+          { % include search.html % }
         </header>
       </div>
     </div>
