--- a/style.scss
+++ b/style.scss
@@ -93,6 +93,11 @@ ul {
   list-style-type: disc;
 }
 
+.ulnone {
+  list-style-type: none;
+  padding: 0 !important;
+}
+
 ol {
   list-style-type: decimal;
 }
