--- a/_includes/search.html
+++ b/_includes/search.html
@@ -55,6 +55,11 @@
 <style>
   #lunrsearchresults {
     padding-top: 0.2rem;
+    border-bottom: 1px solid #222;
+  }
+  #lunrsearchresults ul {
+    list-style-type: none;
+    padding: 0px !important;
   }
   .lunrsearchresult {
     padding-bottom: 1rem;
@@ -80,7 +85,7 @@
     width: 100%;
     background: black;
     border: solid 1px;
-    border-color: #444;
+    border-color: #222;
     border-radius: 5px;
     padding: 5px;
     color: white;
@@ -104,5 +109,5 @@
   </p>
 </form>
 <div id="lunrsearchresults">
-  <ul class="ulnone"></ul>
+  <ul></ul>
 </div>
