--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,9 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">{{ content }}</div>
-    {% include search.html %}
+    <div id="main" role="main" class="container">
+      {% include search.html %} {{ content }}
+    </div>
     <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">{% include svg-icons.html %}</footer>
