--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,11 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  {% include read_time.html %}
 
-  <div class="entry">
-    {{ content }}
-  </div>
+  <div class="entry">{{ content }}</div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+  <div class="date">Written on {{ page.date | date: "%B %e, %Y" }}</div>
 
   {% include disqus.html %}
 </article>
