--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  {% include read_time.html %}
+  <span class="reading-time" title="Estimated read time">
+    {% assign words = content | number_of_words %} {% if words < 360 %} 1 min {% else %} {{ words | divided_by:180 }} mins {% endif %}
+  </span>
 
   <div class="entry">{{ content }}</div>
 
