fix reading time

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,12 +52,11 @@
             <a href="{{ site.baseurl }}/resume">Resume</a>
           </nav>
         </header>
+        <div class="search-section">{% include search.html %}</div>
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
-      {% include search.html %} {{ content }}
-    </div>
+    <div id="main" role="main" class="container">{{ content }}</div>
     <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">{% include svg-icons.html %}</footer>
