--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,7 +1,6 @@
 {% raw %}
 <span class="reading-time" title="Estimated read time">
-  {% assign words = content | number_of_words %} {% if words < 360 %} 1 min {%
-  else %} {{ words | divided_by:180 }} mins {% endif %}
+  Reading time {% assign words = content | number_of_words %} {% if words < 360 %} 1 minutes {% else %} {{ words | divided_by:180 }} minutes {% endif %}
 </span>
 
 {% endraw %}
