fix reading time

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -43,11 +43,14 @@
                   var url = documents[ref]['url'];
                   var title = documents[ref]['title'];
                   var body = documents[ref]['body'].substring(0,160)+'...';
-                  document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML + "<li class='lunrsearchresult'><a href='" + url + "'><span class='title'>" + title + "</span><br /><span class='body'>"+ body +"</span></a></li>";
+                  if(title != ''){
+                    document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML + "<li class='lunrsearchresult'><a href='" + url + "'><span class='title'>" + title + "</span><br /><span class='body'>"+ body +"</span></a></li>";
+                  }
               }
           } else {
               document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found</li>";
           }
+          document.getElementById("lunrsearchresults").setAttribute("style","border-bottom: 1px solid #222;");
       }
       return false;
   }
@@ -55,7 +58,6 @@
 <style>
   #lunrsearchresults {
     padding-top: 0.2rem;
-    border-bottom: 1px solid #222;
   }
   #lunrsearchresults ul {
     list-style-type: none;
