--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,9 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  {% include read_time.html %}
-
+  <span class="reading-time" title="Estimated read time">
+    Reading time {% assign words = content | number_of_words %} {% if words < 360 %} 1 minutes {% else %} {{ words | divided_by:180 }} minutes {% endif %}
+  </span>
   <div class="entry">{{ content }}</div>
 
   <div class="date">Written on {{ page.date | date: "%B %e, %Y" }}</div>
