fix reading time

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -51,6 +51,7 @@
               document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found</li>";
           }
           document.getElementById("lunrsearchresults").setAttribute("style","border-bottom: 1px solid #222;");
+          document.getElementById("main").setAttribute("style","display: none;");
       }
       return false;
   }
