--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">{{ content }}</div>
+    <div id="main" role="main" class="container main-content">{{ content }}</div>
     <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">{% include svg-icons.html %}</footer>
