--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   <span class="reading-time" title="Estimated read time">
-    Reading time {% assign words = content | number_of_words %} {% if words < 360 %} 1 minutes {% else %} {{ words | divided_by:180 }} minutes {% endif %}
+    Estimated read time {% assign words = content | number_of_words %} {% if words < 360 %} 1 minutes {% else %} {{ words | divided_by:180 }} minutes {% endif %}
   </span>
   <div class="entry">{{ content }}</div>
 
