--- a/style.scss
+++ b/style.scss
@@ -12,9 +12,27 @@
 /**************/
 /* BASE RULES */
 /**************/
+/*
+ *  STYLE 8
+ */
+
+::-webkit-scrollbar-track {
+  border: 1px solid black;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
 
 html {
   font-size: 100%;
+  overflow-y: scroll;
 }
 
 body {
