--- a/style.scss
+++ b/style.scss
@@ -12,21 +12,17 @@
 /**************/
 /* BASE RULES */
 /**************/
-/*
- *  STYLE 8
- */
-
-::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
   border: 1px solid black;
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar {
+html::-webkit-scrollbar {
   width: 10px;
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   background-color: #000000;
 }
 
