--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/resume">Resume</a>
+            <a style="color: #35a7fa;" href="{{ site.baseurl }}/resume">Resume</a>
           </nav>
         </header>
         <div class="search-section">{% include search.html %}</div>
