--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@
 /* BASE RULES */
 /**************/
 html::-webkit-scrollbar-track {
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: black;
 }
 
