--- a/style.scss
+++ b/style.scss
@@ -180,7 +180,9 @@ img {
 //
 // .masthead
 //
-
+.post-justify {
+  text-align: justify;
+}
 .wrapper-masthead {
   // margin-bottom: 50px;
   margin-bottom: 0px;
