--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span class="reading-time" title="Estimated read time">
     Estimated read time {% assign words = content | number_of_words %} {% if words < 360 %} 1 minutes {% else %} {{ words | divided_by:180 }} minutes {% endif %}
   </span>
-  <div class="entry">{{ content }}</div>
+  <div class="entry post-justify">{{ content }}</div>
 
   <div class="date">Written on {{ page.date | date: "%B %e, %Y" }}</div>
 
