--- a/style.scss
+++ b/style.scss
@@ -189,7 +189,7 @@ img {
 }
 
 .masthead {
-  padding: 20px 0;
+  padding-top: 20px;
   // border-bottom: 1px solid $lightGray;
 
   @include mobile {
