change font style

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,6 +25,7 @@ $white: #000;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$monts: "Montserrat", sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
