--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,12 @@
       title="{{ site.name }} - {{ site.description }}"
       href="{{ site.baseurl }}/feed.xml"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
@@ -49,14 +54,18 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a style="color: #35a7fa;" href="{{ site.baseurl }}/resume">Resume</a>
+            <a style="color: #35a7fa" href="{{ site.baseurl }}/resume"
+              >Resume</a
+            >
           </nav>
         </header>
         <div class="search-section">{% include search.html %}</div>
       </div>
     </div>
 
-    <div id="main" role="main" class="container main-content">{{ content }}</div>
+    <div id="main" role="main" class="container main-content">
+      {{ content }}
+    </div>
     <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">{% include svg-icons.html %}</footer>
