--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $helveticaNeue;
+  font-family: $monts;
   color: $gray;
   font-weight: bold;
 
@@ -228,7 +228,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $monts;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -247,7 +247,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $monts;
   font-size: 18px;
 
   @include mobile {
