--- a/_includes/search.html
+++ b/_includes/search.html
@@ -85,6 +85,8 @@
     text-decoration: underline;
   }
   .searchblog {
+    font-family: "Montserrat";
+    font-size: 11pt;
     width: 100%;
     background: black;
     border: solid 1px;
@@ -92,14 +94,16 @@
     border-radius: 5px;
     padding: 5px;
     color: white;
-    /* margin-top: 10px; */
   }
   .form-search {
     border-bottom: 1px solid #222;
   }
 </style>
 
-<form class="form-search" onSubmit="return lunr_search(document.getElementById('lunrsearch').value);" >
+<form
+  class="form-search"
+  onSubmit="return lunr_search(document.getElementById('lunrsearch').value);"
+>
   <p>
     <input
       type="text"
