test social media icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
               <a href="{{ site.baseurl }}/">{{ site.name }}</a>
             </h1>
             <p class="site-description">{{ site.description }}</p>
+            {% include social_icon.html %}
           </div>
 
           <nav>
