--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,6 @@
               <a href="{{ site.baseurl }}/">{{ site.name }}</a>
             </h1>
             <p class="site-description">{{ site.description }}</p>
-            {% include social_icon.html %}
           </div>
 
           <nav>
@@ -59,6 +58,7 @@
               >Resume</a
             >
           </nav>
+          <p>{% include social_icon.html %}</p>
         </header>
         <div class="search-section">{% include search.html %}</div>
       </div>
