fix social media icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
                 >Resume</a
               >
             </nav>
-            <p class="site-social">{% include social_icon.html %}</p>
+            <span class="site-social">{% include social_icon.html %}</span>
           </div>
         </header>
         <div class="search-section">{% include search.html %}</div>
