--- a/style.scss
+++ b/style.scss
@@ -190,10 +190,12 @@ img {
 
 .masthead {
   padding-top: 20px;
+  margin-bottom: 10px;
   // border-bottom: 1px solid $lightGray;
 
   @include mobile {
     text-align: center;
+    margin-bottom: 10px;
   }
 }
 
@@ -225,12 +227,13 @@ img {
 }
 
 .site-menu {
-  float: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 
   @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -256,7 +259,7 @@ img {
 
 nav {
   float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
+  // margin-top: 23px; // @TODO: Vertically middle align
   font-family: $monts;
   font-size: 18px;
 
