fix social media icon

--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -1,4 +1,4 @@
-<a href="email">
+<a href="mailto:{{ site.footer-links.email }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
@@ -6,7 +6,10 @@
     />
   </svg>
 </a>
-<a href="instagram">
+<a
+  href="https://instagram.com/{{ site.footer-links.instagram }}"
+  target="_blank"
+>
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
@@ -14,7 +17,10 @@
     />
   </svg>
 </a>
-<a href="facebook">
+<a
+  href="https://www.facebook.com/{{ site.footer-links.facebook }}"
+  target="_blank"
+>
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
@@ -22,7 +28,10 @@
     />
   </svg>
 </a>
-<a href="twt">
+<a
+  href="https://www.twitter.com/{{ site.footer-links.twitter }}"
+  target="_blank"
+>
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
@@ -30,7 +39,10 @@
     />
   </svg>
 </a>
-<a href="in">
+<a
+  href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}"
+  target="_blank"
+>
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
@@ -38,7 +50,7 @@
     />
   </svg>
 </a>
-<a href="git">
+<a href="https://github.com/{{ site.footer-links.github }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#fff"
