--- a/style.scss
+++ b/style.scss
@@ -233,7 +233,8 @@ img {
 
   @include mobile {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -265,7 +266,7 @@ nav {
 
   @include mobile {
     float: none;
-    margin-top: 9px;
+    // margin-top: 9px;
     display: block;
     font-size: 16px;
   }
