--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
           <div class="site-info">
             <h1 class="site-name">
-              <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+              <a href="{{ site.baseurl }}/">{ {{ site.name }} }</a>
             </h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
