--- a/style.scss
+++ b/style.scss
@@ -219,6 +219,7 @@ img {
 .site-info {
   float: left;
   font-weight: 700;
+  margin-top: 5px;
 
   @include mobile {
     float: none;
@@ -244,7 +245,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $monts;
-  font-weight: 300;
+  font-weight: 700;
   font-size: 28px;
   letter-spacing: 1px;
 }
