change post font

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,6 +26,7 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 $monts: "Montserrat", sans-serif;
+$eb: "EB Garamond", serif;
 
 // Mobile breakpoints
 @mixin mobile {
