change post font size

--- a/style.scss
+++ b/style.scss
@@ -183,6 +183,7 @@ img {
 .post-justify {
   text-align: justify;
   font-family: $eb;
+  font-size: 16pt;
 }
 .wrapper-masthead {
   // margin-bottom: 50px;
