change post font style

--- a/style.scss
+++ b/style.scss
@@ -180,7 +180,8 @@ img {
 //
 // .masthead
 //
-.post-justify {
+.post-justify,
+.post-excerpt {
   text-align: justify;
   font-family: $eb;
   font-size: 16pt;
