fix twitter card

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -20,5 +20,6 @@
 {% else %}
 <meta name="description" content="{{ site.description }}" />
 <meta property="og:description" content="{{ site.description }}" />
+<meta property="og:image" content="{{ site.baseurl }}/images/favicon.ico" />
 {% endif %}
 <meta name="author" content="{{ site.name }}" />
