--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,7 @@
 <meta name="twitter:site" content="{ xujaan }" />
 <meta name="twitter:creator" content="{{ site.name }}" />
 <meta property="og:title" content="{{ page.title }}" />
-<meta property="og:image" content="{{ site.baseurl }}/images/thumbnail.png" />
+<meta property="og:image" content="{{ site.url }}/images/thumbnail.png" />
 <meta property="twitter:title" content="{{ page.title }}" />
 {% endif %} 
 {% if page.excerpt %}
