add theme switcher

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,20 +6,20 @@
 $blue: #ffbb3c;
 
 // Grays
-// $black: #000;
-// $darkerGray: #222;
-// $darkGray: #333;
-// $gray: #666;
-// $lightGray: #eee;
-// $white: #fff;
+$black: #000;
+$darkerGray: #222;
+$darkGray: #333;
+$gray: #666;
+$lightGray: #eee;
+$white: #fff;
 
 // Dark theme
-$black: #fff;
-$darkerGray: #eee;
-$darkGray: #fff;
-$gray: #ffbb3c;
-$lightGray: #222;
-$white: #000;
+// $black: #fff;
+// $darkerGray: #eee;
+// $darkGray: #fff;
+// $gray: #ffbb3c;
+// $lightGray: #222;
+// $white: #000;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
