--- a/_includes/search.html
+++ b/_includes/search.html
@@ -88,12 +88,12 @@
     font-family: "Montserrat";
     font-size: 11pt;
     width: 100%;
-    background: black;
+    /* background: black; */
     border: solid 1px;
     border-color: #222;
     border-radius: 5px;
     padding: 5px;
-    color: white;
+    /* color: white; */
   }
   .form-search {
     border-bottom: 1px solid #222;
