--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,13 +3,13 @@
 //
 
 // Colors
-$blue: #ffbb3c;
+$blue: #004ad6;
 
 // Grays
 $black: #000;
 $darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
+$darkGray: #000;
+$gray: #004ad6;
 $lightGray: #eee;
 $white: #fff;
 
