--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              <a style="color: #35a7fa" href="{{ site.baseurl }}/resume"
+              <a style="color: #ffb834" href="{{ site.baseurl }}/resume"
                 >Resume</a
               >
             </nav>
