--- a/style.scss
+++ b/style.scss
@@ -339,7 +339,9 @@ nav {
     font-size: 15px;
   }
 }
-
+.reaction-items {
+  isolation: isolate !important;
+}
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #050505;
