--- a/style.scss
+++ b/style.scss
@@ -256,7 +256,7 @@ img {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 }
 .site-description {
   margin: -5px 0 0 0;
