--- a/style.scss
+++ b/style.scss
@@ -299,7 +299,7 @@ nav {
   display: block;
   padding: 10px 0 10px 0;
   text-align: center;
-  color: #fff;
+  color: #000;
   border-top: 1px solid #222;
 }
 .navigation .pagination {
