--- a/_includes/search.html
+++ b/_includes/search.html
@@ -88,9 +88,9 @@
     font-family: "Montserrat";
     font-size: 11pt;
     width: 100%;
-    /* background: black; */
+    background: #ededed;
     border: solid 1px;
-    border-color: #222;
+    border-color: #ededed;
     border-radius: 5px;
     padding: 5px;
     /* color: white; */
