--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -66,5 +66,5 @@
   </svg>
 </a>
 <a href="#" onclick="darkmode.toggle();">
-  <span style="font-size: 24px">🌓</span>
+  <span style="font-size: 18pt">🌓</span>
 </a>
