--- a/_includes/search.html
+++ b/_includes/search.html
@@ -48,7 +48,7 @@
                   }
               }
           } else {
-              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found</li>";
+              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found, back to <a href='{{ site.url }}'>Home</a></li>";
           }
           document.getElementById("lunrsearchresults").setAttribute("style","border-bottom: 1px solid #222;");
           document.getElementById("main").setAttribute("style","display: none;");
