--- a/_includes/search.html
+++ b/_includes/search.html
@@ -48,7 +48,7 @@
                   }
               }
           } else {
-              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found, back to <a href='{{ site.url }}'>Home</a></li>";
+              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found <a href='{{ site.url }}'>Back to home</a></li>";
           }
           document.getElementById("lunrsearchresults").setAttribute("style","border-bottom: 1px solid #222;");
           document.getElementById("main").setAttribute("style","display: none;");
@@ -68,14 +68,14 @@
     padding-bottom: 1rem;
   }
   .lunrsearchresult .title {
-    color: #ffbb3c;
+    color: #004ad6;
   }
   .lunrsearchresult .url {
-    color: #ffff;
+    color: #000;
   }
   .lunrsearchresult a {
     display: block;
-    color: #ffff;
+    color: #000;
   }
   .lunrsearchresult a:hover,
   .lunrsearchresult a:focus {
