--- a/style.scss
+++ b/style.scss
@@ -253,10 +253,12 @@ img {
   letter-spacing: 1px;
 }
 .site-social {
+  width: 70%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: space-between;
 }
 .site-description {
   margin: -5px 0 0 0;
