--- a/_includes/search.html
+++ b/_includes/search.html
@@ -48,7 +48,7 @@
                   }
               }
           } else {
-              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found <a href='{{ site.url }}'>Back to home</a></li>";
+              document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML = "<li class='lunrsearchresult'>No results found <a href='{{ site.url }}'><h6>Back to home</h6></a></li>";
           }
           document.getElementById("lunrsearchresults").setAttribute("style","border-bottom: 1px solid #222;");
           document.getElementById("main").setAttribute("style","display: none;");
