--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -65,6 +65,4 @@
     />
   </svg>
 </a>
-<a href="#" onclick="darkmode.toggle();">
-  <span style="font-size: 18pt">🌓</span>
-</a>
+<a href="#" onclick="darkmode.toggle();" style="font-size: 18pt">🌓</a>
