--- a/style.scss
+++ b/style.scss
@@ -257,7 +257,7 @@ img {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 .site-description {
