--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,6 @@
 
     {% include meta.html %}
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <link
       rel="shortcut icon"
       href="{{ site.baseurl }}/images/favicon.ico"
@@ -57,9 +54,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              <a style="color: #ffb834; font-weight: 500" href="{{ site.baseurl }}/resume"
-                >Resume</a
-              >
+              <a style="color: #ffb834; font-weight: 500" href="{{ site.baseurl }}/resume">Resume</a>
             </nav>
           </div>
         </header>
