--- a/style.scss
+++ b/style.scss
@@ -13,17 +13,17 @@
 /* BASE RULES */
 /**************/
 html::-webkit-scrollbar-track {
-  border: 1px solid black;
-  background-color: black;
+  border: 1px solid white;
+  background-color: white;
 }
 
 html::-webkit-scrollbar {
   width: 10px;
-  background-color: black;
+  background-color: white;
 }
 
 html::-webkit-scrollbar-thumb {
-  background-color: white;
+  background-color: black;
 }
 
 html {
