--- a/_includes/search.html
+++ b/_includes/search.html
@@ -29,7 +29,7 @@
       }, this)
   });
   function lunr_search(term) {
-      document.getElementById('lunrsearchresults').innerHTML = '<ul></ul>';
+      document.getElementById('lunrsearchresults').innerHTML = "<ul class='posts'></ul>";
       if(term) {
           document.getElementById('lunrsearchresults').innerHTML = "<p>Search results for '" + term + "'</p>" + document.getElementById('lunrsearchresults').innerHTML;
           //put results on the screen.
