--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
             <span class="site-social">{% include social_icon.html %}</span>
             <nav>
               <a href="{{ site.baseurl }}/">Blog</a>
+              <a href="{{ site.baseurl }}/portofolio">Portofolio</a>
               <a href="{{ site.baseurl }}/about">About</a>
               <a style="color: #ffb834; font-weight: 500" href="{{ site.baseurl }}/resume">Resume</a>
             </nav>
