--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -65,4 +65,4 @@
     />
   </svg>
 </a>
-<a href="#" onclick="darkmode.toggle();" style="font-size: 18pt">🌓</a>
+<a href="#" onclick="darkmode.toggle(); togglefav();" style="font-size: 18pt">🌓</a>
