--- a/_includes/darkmode.html
+++ b/_includes/darkmode.html
@@ -14,13 +14,5 @@
       $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon.ico");
     }
   }
-  if (darkmode.isActivated() == true) {
-    $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon-blue.ico");
-  } else {
-    $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon.ico");
-  }
-  //   function addDarkmodeWidget() {
-  //     new Darkmode().showWidget();
-  //   }
-  //   window.addEventListener("load", addDarkmodeWidget);
+  togglefav();
 </script>
