--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -10,6 +10,7 @@
     viewBox="0 0 822 460"
     enable-background="new 0 0 822 460"
     xml:space="preserve"
+    style="margin-top: 7px"
   >
     <path
       fill="#000000"
