add mastodon identifier

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
       href="{{ site.baseurl }}/images/favicon.ico"
       type="image/x-icon"
     />
+    <link rel="me" href="https://mastodon.social/@xujaan" />
     <link
       rel="stylesheet"
       type="text/css"
