--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,8 +59,8 @@
               <a href="{{ site.baseurl }}/about">About</a>
               <a
                 style="color: #ffb834; font-weight: 500"
-                href="{{ site.baseurl }}/resume"
-                >Resume</a
+                href="{{ site.baseurl }}/docs/AhmadAkhusSyujan_CV.pdf"
+                >CV</a
               >
             </nav>
           </div>
