--- a/style.scss
+++ b/style.scss
@@ -29,12 +29,14 @@ html::-webkit-scrollbar-thumb {
 html {
   font-size: 100%;
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 body {
   background: $white;
   font: 18px/1.4 $monts;
   color: $darkGray;
+  scroll-behavior: smooth;
 }
 
 .container {
