--- a/_includes/darkmode.html
+++ b/_includes/darkmode.html
@@ -7,12 +7,12 @@
 ></script>
 <script>
   const darkmode = new Darkmode();
-  function togglefav() {
-    if (darkmode.isActivated() == true) {
-      $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon.ico");
-    } else {
-      $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon-blue.ico");
-    }
-  }
-  togglefav();
+  // function togglefav() {
+  //   if (darkmode.isActivated() == true) {
+  //     $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon.ico");
+  //   } else {
+  //     $("#favicon").attr("href", "{{ site.baseurl }}/images/favicon-blue.ico");
+  //   }
+  // }
+  // togglefav();
 </script>
