--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -1,4 +1,4 @@
-<a href="https://ngl.link/xujaan" target="_blank">
+<!-- <a href="https://ngl.link/xujaan" target="_blank">
   <svg
     version="1.1"
     id="Layer_1"
@@ -225,11 +225,8 @@ z"
       d="M101.3 141.6v228.9h0.3 308.4 0.8V141.6H101.3zM375.7 167.8l-119.7 91.5 -119.6-91.5H375.7zM127.6 194.1l64.1 49.1 -64.1 64.1V194.1zM127.8 344.2l84.9-84.9 43.2 33.1 43-32.9 84.7 84.7L127.8 344.2 127.8 344.2zM384.4 307.8l-64.4-64.4 64.4-49.3V307.8z"
     />
   </svg>
-</a>
-<a
-  href="https://instagram.com/{{ site.footer-links.instagram }}"
-  target="_blank"
->
+</a> -->
+<a href="https://instagram.com/{{ site.footer-links.instagram }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <g>
       <path
@@ -244,10 +241,7 @@ z"
     </g>
   </svg>
 </a>
-<a
-  href="https://www.twitter.com/{{ site.footer-links.twitter }}"
-  target="_blank"
->
+<a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#000"
@@ -255,10 +249,7 @@ z"
     />
   </svg>
 </a>
-<a
-  href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}"
-  target="_blank"
->
+<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#000"
@@ -266,10 +257,7 @@ z"
     />
   </svg>
 </a>
-<a
-  href="https://www.facebook.com/{{ site.footer-links.facebook }}"
-  target="_blank"
->
+<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="_blank">
   <svg width="32" viewBox="0 0 512 512">
     <path
       fill="#000"
@@ -285,6 +273,4 @@ z"
     />
   </svg>
 </a>
-<a href="#" onclick="darkmode.toggle(); togglefav();" style="font-size: 18pt"
-  >🌓</a
->
+<a href="#" onclick="darkmode.toggle(); togglefav();" style="font-size: 18pt">🌓</a>
